making small edits from Andreas

--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -95,6 +95,13 @@ aps,
 \author{L. Spentzouris}
 \affiliation{Illinois Institute of Technology, Chicago, IL}
 
+
+\author{Y. Ineichen }
+\affiliation{% 
+	place holder 1
+}%
+
+
 \author{Andreas Adelmann}
 \email{andreas.adelmann@psi.ch}
 \author{A. Kolano}
@@ -103,9 +110,6 @@ aps,
 
 \affiliation{
 	PSI, Villigen, Switzerland}%
-
-\author{Y Ineichen}%
-\altaffiliation[Also at ]{Department of Computer Science, ETH Zurich, Switzerland}%Lines break
 
 \author{C. Bekas}
 \author{A. Curioni}
