more changes according to our discussion

--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -533,7 +533,7 @@ We implemented the framework in \texttt{C++}, utilizing features like template
 %\noindent\begin{minipage}{0.48\textwidth}
 %\noindent
 \begin{code}[Assembling the optimizer \\ from components]
-typedef OpalInputFileParser Input_t;
+typedef  \textsc{OPAL-t} InputFileParser Input_t;
 typedef PisaVariator        Opt_t;
 typedef OpalSimulation      Sim_t;
 
