--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -84,7 +84,7 @@ aps,
 
 
 \title{A Parallel General Purpose Multi-Objective Optimization Framework,
-  with Application To Beam Dynamics}
+  with Application To Electron Beam Dynamics}
 %\thanks{A footnote to the article title}%
 
 
