--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -893,7 +893,7 @@ Similarly, the gun and beam line time step was investigated confirming the
 %  in a forthcoming publication.
 %The number of individuals is the only limiting factor.
 
-The framework was then applied to a larger and untested beam dynamics problem at the AWA.
+The framework was then applied to a larger beam dynamics problem at the AWA.
 Optimization of the 3D beam size and energy spread was accomplished.
 A scan of time step and hyper parameters was done to determine computational settings.
 Then a full scale physics optimization was performed.
