add affiliation of Yves

--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -95,15 +95,10 @@ aps,
 \author{L. Spentzouris}
 \affiliation{Illinois Institute of Technology, Chicago, IL}
 
-
-\author{Y. Ineichen }
-\affiliation{% 
-	place holder 1
-}%
-
-
 \author{A. Adelmann}
 \email{andreas.adelmann@psi.ch}
+\author{Y. Ineichen }
+%\email{yves.ineichen@gmail.com}
 \author{A. Kolano}
 \altaffiliation[Also at ]{
 	University of Huddersfield, West Yorkshire, United Kingdom and  CERN, Genf}
