--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -1,8 +1,7 @@
 \section{EXPERIMENTS} \label{sec:experiments}
 
 In this section we present numerical results of the validation benchmark and
-  discuss a proof of concept application in the domain of particle
-  accelerators.
+  discuss optimization of a photoinjector operated in the space charge dominated regime.
 
 \subsection{Optimizer Validation}
 
@@ -23,9 +22,9 @@ To that end, we use a metric for comparing the quality of a Pareto
   front.
 Given a point in the Pareto set, we compute the $m$ dimensional volume (for
   $m$ objectives) of the dominated space, relative a chosen origin.
-We visualize this for $2$ objectives in Figure~\ref{fig:hypervolume}.
+We visualize this for $2$ objectives in Fig.~\ref{fig:hypervolume}.
 For further information and details of the implementation see~\cite{whbb:12}.
-Figure~\ref{fig:pisa_bench} and the corresponding hypervolume values in
+Fig.~\ref{fig:pisa_bench} and the corresponding hypervolume values in
   Table~\ref{tbl:bench_rms_error}.
 The reference Pareto front is clearly very well approximated.
 It took a total of 1100 function evaluations to perform this computation.
@@ -68,365 +67,6 @@ From Table~\ref{tbl:bench_rms_error} we deduce that we achieved satisfactory
   additional 100 evaluations for the initial population) function evaluations.
 
 
-\subsection{Ferrario Matching Point}\label{ferrario}
-
-As a verification and proof of concept we reproduce the Ferrario
-  matching point discovered by Ferrario \textit{et~al.}~\cite{fcpr:00},
-  by formulating the problem as a  multi-objective optimization problem.
-Using the low-dimensional and fast nature of their new simulation code
-  Homdyn~\cite{homdyn}, an extensive beam dynamics study was conducted.
-
-One of the results of the study presented in \cite{fcpr:00} was the discovery
-  of a novel working point.
-The authors noticed that the second emittance minimum can profit from the
-  additional emittance compensation in the accelerating traveling wave
-  structure ensuring that the second emittance minimum occurs at a higher
-  energy.
-This property is attained if the beam emittance has a maximum and the root
-  mean square (rms) beam size has a minimum at the entrance of the first
-  accelerating traveling wave structure.
-This behavior is illustrated in Figure~\ref{fig:fer_match}.
-
-\begin{figure}
-  \centering
-  \input{figures/ferrario_illustrated}
-  \caption{Illustration of the Ferrario matching criteria: beam emittance
-  attains a maximum and rms beam size a minimum at the entrance to the first
-  accelerating traveling wave structure.}
-  \label{fig:fer_match}
-\end{figure}
-
-By artificially reproducing this working point as the solution of a
-  multi-objective optimization problem given in equations
-  (\ref{eq:swissfel:p1}) to (\ref{eq:swissfel:lastdvar}),
-  we demonstrate the automation of discovering optimal beam dynamics behaviors
-  given a set of desired objectives.
-
-\begin{align}
-\text{min}  \quad & \left[ \Delta \text{rms}_{x,\text{peak}} = \vert 3.0 -
-\text{rms}_{x,\text{peak}} \vert, \right. \label{eq:swissfel:p1}\\
-                & \Delta \varepsilon_{x,\text{peak}}  = \vert 3.0 -
-                \varepsilon_{x,\text{peak}} \vert, \label{eq:swissfel:p2}\\
-                & \left. \vert \text{rms}_{x, \text{peak\_pos}} -
-                \varepsilon_{x,\text{peak\_pos}} \vert
-                \label{eq:swissfel:p3} \right]^T\\
-\text{subject to} \quad & q = 200 \left[\text{pC}\right] \label{eq:swissfel:firstconstr}\\
-          \quad & \text{Volt}_{\text{RF}} = 100 \left[\text{MV/m}\right] \label{eq:swissfel:lastconstr}\\
-          \quad & \sigma_{L} \leq \sigma_x = \sigma_y \leq \sigma_{U} \label{eq:swissfel:firstdvar}\\
-          \quad & \text{KS}_{L} \leq \text{KS}_{\text{RF}} \leq \text{KS}_{U} \label{eq:swissfel:seconddvar}\\
-          \quad & \text{LAG}_{L} \leq \text{LAG}_{\text{RF}} \leq \text{LAG}_{U} \\
-          \quad & \Delta z_{L\text{KS}} \leq \Delta z_{\text{KS}} \leq \Delta z_{U\text{KS}} \label{eq:swissfel:lastdvar}
-\end{align}
-
-The first two objectives minimize the distance from the position of the current
-  minimum peak to the expected peak location at $3.0$\,m for transverse bunch
-  size (beam waist) and emittance (see Figure~\ref{fig:fer_match}).
-The third objective (\ref{eq:swissfel:p3}) adds a condition preferring
-  solutions that have their emittance and rms peak locations at the same
-  $s$-coordinate.
-Equations (\ref{eq:swissfel:firstconstr}) and (\ref{eq:swissfel:firstdvar})
-  define constraints for initial conditions for the simulation: charge,
-  gun voltage and laser spot size.
-Design variables given in (\ref{eq:swissfel:seconddvar}) to
-  (\ref{eq:swissfel:lastdvar}) correspond to field strengths of the
-  first focusing magnet, its displacement, and the phase of the gun.
-
-In order to compute the peaks, we employed an additional Python script.
-This script was called in the \textsc{OPAL}~input file, after the simulation
-  finished using the \texttt{SYSTEM} functionality.
-Once the peaks (in a given range) were located, the two objectives
-  (\ref{eq:swissfel:p1}) and (\ref{eq:swissfel:p2}) were computed and their
-  values written into corresponding files.
-The custom \texttt{fromFile} functor allows us to access the values stored in
-  the peak finder Python script result files
-%
-%\vspace{0.2cm}
-
-\begin{flushleft}
-\begin{Verbatim}[fontsize=\scriptsize]
-rmsx:  OBJECTIVE, EXPR="statVariableAt("rms_x-err.dat", "var")";
-emitx: OBJECTIVE, EXPR="statVariableAt("emit_x-err.dat", "var")";
-match: OBJECTIVE, EXPR="fabs(statVariableAt("emit_x-peak.dat", "var") -
-statVariableAt("rms_x-peak.dat", "var"))";
-\end{Verbatim}
-\end{flushleft}
-\vspace{0.2cm}
-
-\noindent
-The design variables and the assembly of the multi-objective optimization problem
-  can be included in the \textsc{OPAL}~input file as shown below:
-%\vspace{0.2cm}
-
-\begin{flushleft}
-\begin{Verbatim}[fontsize=\scriptsize]
-d1: DVAR, VARIABLE="SIGX", LOWERBOUND="0.00025", UPPERBOUND="0.00029";
-d2: DVAR, VARIABLE="FIND1_MSOL10_i", LOWERBOUND="110", UPPERBOUND="120";
-d3: DVAR, VARIABLE="D_LAG_RGUN", LOWERBOUND="-0.1", UPPERBOUND="0.1";
-d4: DVAR, VARIABLE="D_SOLPOS", LOWERBOUND="-0.05", UPPERBOUND="0.05";
-
-objs:    OBJECTIVES = (rmsx, emitx);
-dvars:   DVARS = (d1, d2, d3, d4);
-constrs: CONSTRAINTS = ();
-opt:     OPTIMIZE, OBJECTIVES=objs, DVARS=dvars,
-CONSTRAINTS=constrs;
-\end{Verbatim}
-\end{flushleft}
-\vspace{0.2cm}
-
-%All numerical experiments in this sections were executed on the
-%  \textsc{Felsim} cluster at PSI\@.
-%The \textsc{Felsim} cluster consists of 8 dual quad-core Intel Xeon
-%  processors at 3.0 GHz and has $2$ GB memory per core with a total of 128
-%  cores.
-%The nodes are connected via Infiniband network with a total bandwidth of 16
-%  GB/s.
-
-The envelope-tracker, mentioned in the previous section, was used to evaluate
-  the forward problems.
-We performed a beam convergence study in order to tune the simulation input
-  parameters to achieve the best trade-off between simulation accuracy and
-  time to solution.
-These parameters include the number of slices (\texttt{NSLICE}) used in the
-  envelope-tracker simulations, simulation timestep (\texttt{DT}) and gun
-  timestep (\texttt{DTGUN}).
-
-Before the simulation can be executed a number of initial beam optics
-  parameters have to be defined in an input file.
-Table~\ref{tbl:et_params} shows the values of these parameters for the
-  envelope-tracker.
-All simulations were performed up to 12.5~m of the
-  \textsc{SwissFEL} 250 MeV injector~\cite{pedr:10} beam line, with
-  energies reaching  up to 120 MeV.
-
-\begin{figure}%[h!]
-  \centering
-  \includegraphics[width=0.8\linewidth]{Report/dt_scan}
-  \caption{Envelope-tracker with different number of slices and simulation
-    time steps.}
-  \label{fig:et-dt}
-\end{figure}
-
-\begin{table}
-  \begin{center}
-    \caption{Initial conditions for the envelope tracker.}
-    \label{tbl:et_params}
-    \begin{tabular}{ll}
-      \hline\noalign{\smallskip}
-      name & initial value \\
-      \noalign{\smallskip}\hline\noalign{\smallskip}
-        Gun voltage       & $100$ MV\\
-        %Solenoid current & $110.541$ A\\
-        %Laser spot size  & $290 \times 10^{-6}$ m in x and y\\
-        Bunch charge      & $200$ pC\\
-        %DT$_{Gun}$        & $0.06$ ps\\
-        DT$_{\text{Beamline}}$  & $1.5$ ps\\
-        Number of slices  & $400$ \\
-      \noalign{\smallskip}\hline
-    \end{tabular}
-  \end{center}
-\end{table}
-
-The parameter that affects the performance most is the number of slices.
-We scanned the range from $100$ to $1000$ slices to determine the minimal
-  number of slices required for stable results using various timesteps.
-The results (for 100, 400 and 800 slices) of this scan are shown in
-  Figure~\ref{fig:et-dt}.
-Using this data we settled for $400$ slices -- increasing the slice number
-  only minimally improves convergence of the results, therefore using more
-  slices is inefficient.
-
-
-%\begin{figure}
-   %\centering
-     %\includegraphics[angle=0,width=0.8\linewidth]{Report/sliceNew}
-   %\caption{Scan of the envelope-tracker slice number showing its influence
-            %on the exit emittance values.}
-   %\label{fig:scan_slices}
-%\end{figure}
-
-In a next step the influence of different time steps was examined.
-To that end a series of optimization runs with 100, 400 and 800 slices and
-  varying timestep was performed.
-%Figures \ref{fig:pareto_front_1} and \ref{fig:pareto_front_21} show two Pareto
-Figure~\ref{fig:pareto_front_21} shows the Pareto fronts for 400 slices
-  respectively using different timesteps.
-As expected, increasing the number of slices while lowering the timestep
-  produces more detailed results.
-
-%\begin{figure}
-  %\centering
-    %\includegraphics[width=0.9\linewidth]{Report/Run1slices100a}
-  %\caption{Pareto Front for the $1000$th generation with $40$ individuals
-    %using 100 slices, a simulation timestep of 5 ps and a gun timestep of 0.1
-    %ps.}
-  %\label{fig:pareto_front_1}
-%\end{figure}
-
-\begin{figure}%[h!]
-  \centering
-    \includegraphics[width=0.8\linewidth]{Report/front_plot}
-  \caption{Pareto front for the $1000$th generation with $40$ individuals
-    using 400 slices (interesting region magnified), a simulation timestep
-    of 1.5 ps.
-    The individual 3 was selected for further investigations.}
-  \label{fig:pareto_front_21}
-\end{figure}
-
-
-\subsubsection{Optimization Results}
-
-Each of the $40$ points on the Pareto front, shown in
-  Figure~\ref{fig:pareto_front_21}, represents an optimal solution, where
-  emittance and beam size values are compromised to achieve the best agreement
-  with the Ferrario matching point.
-We selected individual $3$ based on a comparison of the emittance and beam size
-  characteristics of all solutions and by retaining the feasibility of the
-  beam line optics parameters.
-The design variables, emittance and beam size of the selected solution are
-  shown in Table~\ref{tbl:des_vars} and Figure~\ref{fig:rmsemit}.
-With the multi-objective optimization framework we attain the same working
-  point as reported in~\cite{pedr:10}.
-
-\begin{table}
-  \begin{center}
-    \caption{The design variables for individual $3$.}
-    \label{tbl:des_vars}
-    \begin{tabular}{ll}
-      \hline\noalign{\smallskip}
-      name & value \\
-      \noalign{\smallskip}\hline\noalign{\smallskip}
-        $\sigma_{x}$          & $0.262$ mm \\
-        Solenoid displacement & $28.8467$ mm \\
-        Gun voltage lag       & $0.0159067$ MV\\
-        Solenoid current      & $111.426$ A \\
-      \noalign{\smallskip}\hline
-    \end{tabular}
-  \end{center}
-\end{table}
-
-\begin{figure}%[h!]
-  \centering
-  \includegraphics[width=0.8\linewidth]{Report/iff_plot_emrms}
-  \caption{Beam size and emittance of individual $3$.}
-  \label{fig:rmsemit}
-\end{figure}
-
-Using the input parameters of the selected solution, we performed a stability
-  analysis by varying the slice number and the time step for both the gun and
-  the beam line.
-Figure~\ref{fig:et-dt} shows that the exit emittance stabilizes for 400
-  slices and various time steps.
-No difference between $800$ and $400$ slices is visible as their minimum
-  maximum extension seems to be in the same range of $0.024$ mm~mrad.
-
-For validation purposes we compared the results of the envelope-tracker using
-  the analytical space charge model with the \textsc{OPAL-t} 3D macro particle
-  tracker.
-The benchmark was run on the first 12.5 meters of the \textsc{SwissFEL} 250
-  MeV injector.
-The results for both rms beam size and emittance are shown in
-  Figure~\ref{fig:et-vs-tt}.
-A good agreement between the two codes can be observed.
-The difference of the larger emittance along the solenoids in case of 3D
-  tracker that is not seen by the envelope-tracker is due to the different
-  definition of the particle momenta (canonical vs.~mechanical).
-Both trackers agree within acceptable limits \cite{chao:99}.
-
-\begin{figure}
-  \centering
-  \includegraphics[width=0.9\linewidth]{Report/iff_plot_emrms_ettt}
-  \caption{Comparison 3D-tracker versus envelope-tracker in case for rms$_{x}$
-    and $\varepsilon_{x}$.}
-  \label{fig:et-vs-tt}
-\end{figure}
-
-%\subsection{IW2: Inverse Problem}
-
-%In order to find cross correlations we try to solve the inverse problem
-  %(15) -- (23)
-%%
-%\begin{align}
-  %\text{min}  \quad & \sqrt{\frac{1}{N} \sum \left( \text{rmx}_{x,s} -
-                      %\text{m}_{x,s} \right)^2 } \text{,}\\
-              %\quad & \sqrt{\frac{1}{N} \sum \left( \text{rmx}_{y,s} -
-                      %\text{m}_{y,s} \right)^2 } \text{,}\\
-              %\quad & \sqrt{\frac{1}{N} \sum \left( \text{rmx}_{z,s} -
-                      %\text{m}_{z,s} \right)^2 } \\
-  %\text{s.t.} \quad & -0.95 \leq \text{R52} \leq -0.65 \label{eq:iw2:fistdvar}\\
-              %\quad & -0.90 \leq \text{R61} \leq -0.50 \\
-              %\quad & 0.0   \leq \text{R62} \leq 0.20 \\
-              %\quad & 0.25 \leq \text{CORR}_x \leq 0.65 \\
-              %\quad & 0.55 \leq \text{CORR}_y \leq 0.95 \\
-              %\quad & 0.10 \leq \text{CORR}_z \leq 0.50 \label{eq:iw2:lastdvar} \text{.}
-%\end{align}
-%%
-%We try to match the beam to measurements from the real machine by minimizing
-  %the sum of $N$ squared measurement ($m_{d,s}$ at a given position
-  %$s$) errors for rmx beam size in each dimensions.
-%The design variables (\ref{eq:iw2:fistdvar}) - (\ref{eq:iw2:lastdvar}) define
-  %the correlation matrix used when generating particles, e.g., R51, R52, R61,
-  %R62 describe limits of correlations between planes.
-%The initial Binomial distribution (with $m = ?$) has the form
-%%
-%\begin{equation*}
-  %\frac{1}{2\pi\sigma_x\sigma_y}exp(-\frac{x^2}{2\sigma_x^2}
-  %-\frac{y^2}{2\sigma_y^2})
-  %\text{.}
-%\end{equation*}
-%%
-
-%Since these correlations cannot be measured we get the real values by solving
-  %the inverse problem mentioned above.
-
-%Currently we run the simulations on a low resolution space charge grid ($8
-  %\times 8 \times 8$) as a proof of concept.
-%In a next step a simple Python script would be applied to iteratively rerun
-  %the optimizer with increasing space-charge resolution when the limits of the
-  %design variables are narrow enough (iteratively diminishing search space).
-%\subsection{IW2: Inverse Problem}
-
-%In order to find cross correlations we try to solve the inverse problem
-  %(15) -- (23)
-%%
-%\begin{align}
-  %\text{min}  \quad & \sqrt{\frac{1}{N} \sum \left( \text{rmx}_{x,s} -
-                      %\text{m}_{x,s} \right)^2 } \text{,}\\
-              %\quad & \sqrt{\frac{1}{N} \sum \left( \text{rmx}_{y,s} -
-                      %\text{m}_{y,s} \right)^2 } \text{,}\\
-              %\quad & \sqrt{\frac{1}{N} \sum \left( \text{rmx}_{z,s} -
-                      %\text{m}_{z,s} \right)^2 } \\
-  %\text{s.t.} \quad & -0.95 \leq \text{R52} \leq -0.65 \label{eq:iw2:fistdvar}\\
-              %\quad & -0.90 \leq \text{R61} \leq -0.50 \\
-              %\quad & 0.0   \leq \text{R62} \leq 0.20 \\
-              %\quad & 0.25 \leq \text{CORR}_x \leq 0.65 \\
-              %\quad & 0.55 \leq \text{CORR}_y \leq 0.95 \\
-              %\quad & 0.10 \leq \text{CORR}_z \leq 0.50 \label{eq:iw2:lastdvar} \text{.}
-%\end{align}
-%%
-%We try to match the beam to measurements from the real machine by minimizing
-  %the sum of $N$ squared measurement ($m_{d,s}$ at a given position
-  %$s$) errors for rmx beam size in each dimensions.
-%The design variables (\ref{eq:iw2:fistdvar}) - (\ref{eq:iw2:lastdvar}) define
-  %the correlation matrix used when generating particles, e.g., R51, R52, R61,
-  %R62 describe limits of correlations between planes.
-%The initial Binomial distribution (with $m = ?$) has the form
-%%
-%\begin{equation*}
-  %\frac{1}{2\pi\sigma_x\sigma_y}exp(-\frac{x^2}{2\sigma_x^2}
-  %-\frac{y^2}{2\sigma_y^2})
-  %\text{.}
-%\end{equation*}
-%%
-
-%Since these correlations cannot be measured we get the real values by solving
-  %the inverse problem mentioned above.
-
-%Currently we run the simulations on a low resolution space charge grid ($8
-  %\times 8 \times 8$) as a proof of concept.
-%In a next step a simple Python script would be applied to iteratively rerun
-  %the optimizer with increasing space-charge resolution when the limits of the
-  %design variables are narrow enough (iteratively diminishing search space). 
-%\vspace{-7em}
 
 \subsection{AWA Photoinjector Optimization} \label{awaproblem}
 Next we apply the optimization framework to a high charge beam line
