spelling out Figure when at beginning of sent.

--- a/paper/prab.tex
+++ b/paper/prab.tex
@@ -360,7 +360,7 @@ Applied to multi-objective optimization problems, genes correspond to
   design variables.
 The fitness of an individual is loosely related to the value of the objective
   functions for the corresponding genes.
-Fig.~\ref{fig:varsel} schematically depicts the connection of the
+Figure~\ref{fig:varsel} schematically depicts the connection of the
   components introduced above.
 The process starts with an initially random population of individuals, each
   individual with a unique set of genes and corresponding fitness,
