--- a/paper/theor-experiment.tex
+++ b/paper/theor-experiment.tex
@@ -24,7 +24,7 @@ Given a point in the Pareto set, we compute the $m$ dimensional volume (for
   $m$ objectives) of the dominated space, relative a chosen origin.
 We visualize this for $2$ objectives in Fig.~\ref{fig:hypervolume}.
 For further information and details of the implementation see~\cite{whbb:12}.
-Fig.~\ref{fig:pisa_bench} and the corresponding hypervolume values in
+Figure~\ref{fig:pisa_bench} and the corresponding hypervolume values in
   Table~\ref{tbl:bench_rms_error}.
 The reference Pareto front is clearly very well approximated.
 It took a total of 1100 function evaluations to perform this computation.
